Add Test for task1